--- a/bunker-oil.html
+++ b/bunker-oil.html
@@ -27,6 +27,8 @@
     <!-- Pe7 Icon -->
     <link rel="stylesheet" type="text/css" href="assets/css/pe-icon-7.css" />
 
+    <link rel="stylesheet" type="text/css" href="assets/css/custom.css" />
+
     <!-- Style Css -->
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
@@ -35,7 +37,7 @@
 
     <div class="fixed top-0 w-full z-50 custom-nav">
       <nav class="py-[22px] relative ease-in-out duration-500 mobile-nav">
-        <div class="container">
+        <div class="container-nav mx-auto px-4">
           <div class="flex items-center justify-between md:block">
             <div class="justify-between items-center flex w-full">
               <div class="z-50 w-20 h-14 relative lg:hidden">
@@ -142,6 +144,13 @@
                       >LPG & LNG</a
                     >
                   </li>
+                  <li class="contact">
+                    <a
+                      href="contact.html"
+                      class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
+                      >CONTACT</a
+                    >
+                  </li>
                 </ul>
               </div>
             </div>
@@ -219,6 +228,13 @@
                     href="lpg-lng.html"
                     class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
                     >LPG & LNG</a
+                  >
+                </li>
+                <li class="contact">
+                  <a
+                    href="contact.html"
+                    class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
+                    >CONTACT</a
                   >
                 </li>
               </ul>
@@ -322,7 +338,7 @@
           <img src="assets/images/physical_2.JPG" alt="" />
         </div>
       </div>
-      <p class="text-center text-2xl mt-16">
+      <p class="text-center text-2xl mt-16 text-blue">
         We are your global fueling solution with physical supply ports in the
         world's leading maritime hubs
       </p>
@@ -362,14 +378,14 @@
               </li>
               <li>
                 <a
-                  href="#"
+                  href="scope.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >SCOPE OF SERVICES</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="bunker-oil.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >BUNKER OIL</a
                 >
@@ -380,35 +396,35 @@
             <ul class="mt-12 space-y-2.5">
               <li>
                 <a
-                  href="#"
+                  href="fuels.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >FUELS</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="crude-oil.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >CRUDE OIL</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="natural-gas.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >NATURAL GAS</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="lpg-lng.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >LPG & LNG</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="contact.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >GET IN TOUCH</a
                 >
