--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
         alt="Oil Rig"
         class="w-full h-full object-cover"
       />
-      <div class="bg-[#1f232d]/40 absolute inset-0 w-full h-full"></div>
+      <div class="bg-[#1f232d]/50 absolute inset-0 w-full h-full"></div>
 
       <div class="absolute top-0 right-0 p-8">
         <h1 class="text-4xl font-bold">CONTACT US</h1>
@@ -524,7 +524,7 @@
 
       <div class="absolute bottom-0 left-0 p-8">
         <div>
-          <p class="text-lg mb-2 font-bold">How can we help you?</p>
+          <p class="text-2xl mb-2 font-bold">How can we help you?</p>
           <p class="mb-1 font-semibold">Phone: (1) 956 7287257</p>
           <p class="mb-1 font-semibold">
             Email: info@visioninternationalpetroleum.com
@@ -629,14 +629,14 @@
               </li>
               <li>
                 <a
-                  href="#"
+                  href="lpg-lng.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >LPG & LNG</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="contact.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >GET IN TOUCH</a
                 >
