--- a/lpg-lng.html
+++ b/lpg-lng.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Site Title -->
-    <title>Sale of Natural Gas - VISION INTERNATIONAL PETROLEUM</title>
+    <title>LPG & LNG - VISION INTERNATIONAL PETROLEUM</title>
 
     <!-- Site favicon -->
     <link rel="shortcut icon" href="assets/images/favicon.ico" />
@@ -18,10 +18,10 @@
       href="assets/css/materialdesignicons.min.css"
     />
 
+    <link rel="stylesheet" type="text/css" href="assets/css/custom.css" />
+
     <!-- Swiper's CSS -->
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
-
-    <link rel="stylesheet" type="text/css" href="assets/css/custom.css" />
 
     <!-- Tobii Css -->
     <link rel="stylesheet" href="assets/css/tobii.min.css" />
@@ -132,15 +132,15 @@
                   </li>
                   <li class="natural">
                     <a
-                      href="natural-gas.html active "
-                      class="text-sm text-green hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
+                      href="natural-gas.html"
+                      class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
                       >NATURAL GAS</a
                     >
                   </li>
-                  <li class="contact">
+                  <li class="contact active">
                     <a
                       href="lpg-lng.html"
-                      class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
+                      class="text-sm text-green hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
                       >LPG & LNG</a
                     >
                   </li>
@@ -216,17 +216,17 @@
                     >CRUDE OIL</a
                   >
                 </li>
-                <li class="natural active">
+                <li class="natural">
                   <a
                     href="natural-gas.html"
-                    class="text-sm text-green hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
+                    class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
                     >NATURAL GAS</a
                   >
                 </li>
-                <li class="contact">
+                <li class="contact active">
                   <a
                     href="lpg-lng.html"
-                    class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
+                    class="text-sm text-green hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
                     >LPG & LNG</a
                   >
                 </li>
@@ -258,7 +258,7 @@
             <h1
               class="font-medium font-secondary mt-6 text-4xl md:text-[76px] leading-tight text-white"
             >
-              Sale of Natural Gas
+              Sale of LPG & LNG
             </h1>
             <h3 class="font-secondary mt-6 text-3xl leading-7 text-white">
               Products
