--- a/scope.html
+++ b/scope.html
@@ -11,6 +11,8 @@
     <!-- Site favicon -->
     <link rel="shortcut icon" href="assets/images/favicon.ico" />
 
+    <link rel="stylesheet" type="text/css" href="assets/css/custom.css" />
+
     <!-- Material Icon -->
     <link
       rel="stylesheet"
@@ -35,7 +37,7 @@
 
     <div class="fixed top-0 w-full z-50 custom-nav">
       <nav class="py-[22px] relative ease-in-out duration-500 mobile-nav">
-        <div class="container">
+        <div class="container-nav mx-auto px-4">
           <div class="flex items-center justify-between md:block">
             <div class="justify-between items-center flex w-full">
               <div class="z-50 w-20 h-14 relative lg:hidden">
@@ -142,6 +144,13 @@
                       >LPG & LNG</a
                     >
                   </li>
+                  <li class="contact">
+                    <a
+                      href="contact.html"
+                      class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
+                      >CONTACT</a
+                    >
+                  </li>
                 </ul>
               </div>
             </div>
@@ -219,6 +228,13 @@
                     href="lpg-lng.html"
                     class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
                     >LPG & LNG</a
+                  >
+                </li>
+                <li class="contact">
+                  <a
+                    href="contact.html"
+                    class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
+                    >CONTACT</a
                   >
                 </li>
               </ul>
@@ -317,7 +333,7 @@
       </div>
     </div>
 
-    <footer class="bg-[#222527] py-12 mt-32">
+    <footer class="bg-[#222527] py-12">
       <div class="container">
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-7 gap-6">
           <div class="md:col-span-2 lg:col-span-2">
@@ -351,14 +367,14 @@
               </li>
               <li>
                 <a
-                  href="#"
+                  href="scope.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >SCOPE OF SERVICES</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="bunker-oil.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >BUNKER OIL</a
                 >
@@ -369,35 +385,35 @@
             <ul class="mt-12 space-y-2.5">
               <li>
                 <a
-                  href="#"
+                  href="fuels.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >FUELS</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="crude-oil.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >CRUDE OIL</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="natural-gas.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >NATURAL GAS</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="lpg-lng.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >LPG & LNG</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="contact.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >GET IN TOUCH</a
                 >
@@ -455,7 +471,6 @@
         </div>
       </div>
     </footer>
-
     <!-- Back To Top -->
     <a
       href="#"
