--- a/services.html
+++ b/services.html
@@ -18,6 +18,8 @@
       href="assets/css/materialdesignicons.min.css"
     />
 
+    <link rel="stylesheet" type="text/css" href="assets/css/custom.css" />
+
     <!-- Swiper's CSS -->
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
 
@@ -34,7 +36,7 @@
     <!-- Start Navbar -->
     <div class="fixed top-0 w-full z-50 custom-nav">
       <nav class="py-[22px] relative ease-in-out duration-500 mobile-nav">
-        <div class="container">
+        <div class="container-nav mx-auto px-4">
           <div class="flex items-center justify-between md:block">
             <div class="justify-between items-center flex w-full">
               <div class="z-50 w-20 h-14 relative lg:hidden">
@@ -141,6 +143,13 @@
                       >LPG & LNG</a
                     >
                   </li>
+                  <li class="contact">
+                    <a
+                      href="contact.html"
+                      class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
+                      >CONTACT</a
+                    >
+                  </li>
                 </ul>
               </div>
             </div>
@@ -218,6 +227,13 @@
                     href="lpg-lng.html"
                     class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
                     >LPG & LNG</a
+                  >
+                </li>
+                <li class="contact">
+                  <a
+                    href="contact.html"
+                    class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
+                    >CONTACT</a
                   >
                 </li>
               </ul>
@@ -321,7 +337,7 @@
       <div class="container">
         <div class="grid grid-cols-1">
           <div class="text-center">
-            <p class="text-muted mx-auto max-w-[650px] text-center">
+            <p class="text-muted mx-auto max-w-[650px] text-justify">
               Our team provides an exclusive sales service for our customers
               thanks to various commercial alliances with different companies
               that fulfill the supply and storage of a wide variety of points in
@@ -523,7 +539,7 @@
             />
           </div>
         </div>
-        <p class="text-center text-2xl mt-16">
+        <p class="text-center text-2xl mt-16 text-blue">
           We are your global fueling solution with physical supply ports in the
           world's leading maritime hubs
         </p>
@@ -646,7 +662,7 @@
         <h2 class="mt-8 text-xl text-center">TYPES OF GAS AVAILABLE</h2>
 
         <ul class="list-disc mt-4 pl-8">
-          <li>Drynaturalgas.</li>
+          <li>Dry natural gas.</li>
           <li>Liquefied Natural Gas for deployment abroad.</li>
         </ul>
 
@@ -688,7 +704,7 @@
       </div>
     </section>
 
-    <footer class="bg-[#222527] py-12 mt-32">
+    <footer class="bg-[#222527] py-12">
       <div class="container">
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-7 gap-6">
           <div class="md:col-span-2 lg:col-span-2">
@@ -722,14 +738,14 @@
               </li>
               <li>
                 <a
-                  href="#"
+                  href="scope.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >SCOPE OF SERVICES</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="bunker-oil.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >BUNKER OIL</a
                 >
@@ -740,35 +756,35 @@
             <ul class="mt-12 space-y-2.5">
               <li>
                 <a
-                  href="#"
+                  href="fuels.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >FUELS</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="crude-oil.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >CRUDE OIL</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="natural-gas.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >NATURAL GAS</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="lpg-lng.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >LPG & LNG</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="contact.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >GET IN TOUCH</a
                 >
