--- a/whatweoffer.html
+++ b/whatweoffer.html
@@ -18,6 +18,8 @@
       href="assets/css/materialdesignicons.min.css"
     />
 
+    <link rel="stylesheet" type="text/css" href="assets/css/custom.css" />
+
     <!-- Swiper's CSS -->
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
 
@@ -34,7 +36,7 @@
     <!-- Start Navbar -->
     <div class="fixed top-0 w-full z-50 custom-nav">
       <nav class="py-[22px] relative ease-in-out duration-500 mobile-nav">
-        <div class="container">
+        <div class="container-nav mx-auto px-4">
           <div class="flex items-center justify-between md:block">
             <div class="justify-between items-center flex w-full">
               <div class="z-50 w-20 h-14 relative lg:hidden">
@@ -141,6 +143,13 @@
                       >LPG & LNG</a
                     >
                   </li>
+                  <li class="contact">
+                    <a
+                      href="contact.html"
+                      class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
+                      >CONTACT</a
+                    >
+                  </li>
                 </ul>
               </div>
             </div>
@@ -220,6 +229,13 @@
                     >LPG & LNG</a
                   >
                 </li>
+                <li class="contact">
+                  <a
+                    href="contact.html"
+                    class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
+                    >CONTACT</a
+                  >
+                </li>
               </ul>
             </div>
           </div>
@@ -279,10 +295,10 @@
       </p>
     </div>
 
-    <div class="container">
+    <div class="container mb-32">
       <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3 mt-12 projects">
         <div
-          class="project group overflow-hidden relative rounded-none"
+          class="project group overflow-hidden relative rounded-none h-56"
           data-filter="webdesign"
         >
           <a
@@ -312,7 +328,7 @@
           </div>
         </div>
         <div
-          class="project group overflow-hidden relative rounded-none"
+          class="project group overflow-hidden relative rounded-none h-56"
           data-filter="seo"
         >
           <a
@@ -342,7 +358,7 @@
           </div>
         </div>
         <div
-          class="project group overflow-hidden relative rounded-none"
+          class="project group overflow-hidden relative rounded-none h-56"
           data-filter="work"
         >
           <a
@@ -367,7 +383,7 @@
           </div>
         </div>
         <div
-          class="project group overflow-hidden relative rounded-none"
+          class="project group overflow-hidden relative rounded-none h-56"
           data-filter="webdesign"
         >
           <a
@@ -378,7 +394,7 @@
             <img
               src="assets/images/crude_oil_2.jpg"
               alt="image"
-              class="w-full duration-300 group-hover:scale-105"
+              class="w-full duration-300 h-56 group-hover:scale-105"
             />
             <div
               class="work_overlay absolute overflow-hidden inset-2.5 group-hover:after:left-0 group-hover:after:opacity-100 group-hover:after:duration-700 group-hover:after:ease-in-out transition-all group-hover:before:right-0 group-hover:before:opacity-100 group-hover:before:w-full group-hover:before:ease-in-out group-hover:before:h-1/2 group-hover:before:duration-700"
@@ -392,7 +408,7 @@
           </div>
         </div>
         <div
-          class="project group overflow-hidden relative rounded-none"
+          class="project group overflow-hidden relative rounded-none h-56"
           data-filter="seo"
         >
           <a
@@ -403,7 +419,7 @@
             <img
               src="assets/images/lpg_lng.jpg"
               alt="image"
-              class="w-full duration-300 group-hover:scale-105"
+              class="w-full h-56 duration-300 group-hover:scale-105"
             />
             <div
               class="work_overlay absolute overflow-hidden inset-2.5 group-hover:after:left-0 group-hover:after:opacity-100 group-hover:after:duration-700 group-hover:after:ease-in-out transition-all group-hover:before:right-0 group-hover:before:opacity-100 group-hover:before:w-full group-hover:before:ease-in-out group-hover:before:h-1/2 group-hover:before:duration-700"
@@ -417,7 +433,7 @@
           </div>
         </div>
         <div
-          class="project group overflow-hidden relative rounded-none"
+          class="project group overflow-hidden relative rounded-none h-56"
           data-filter="wp"
         >
           <a
@@ -428,7 +444,7 @@
             <img
               src="assets/images/natural_gas.jpg"
               alt="image"
-              class="w-full duration-300 group-hover:scale-105"
+              class="w-full duration-300 h-56 group-hover:scale-105"
             />
             <div
               class="work_overlay absolute overflow-hidden inset-2.5 group-hover:after:left-0 group-hover:after:opacity-100 group-hover:after:duration-700 group-hover:after:ease-in-out transition-all group-hover:before:right-0 group-hover:before:opacity-100 group-hover:before:w-full group-hover:before:ease-in-out group-hover:before:h-1/2 group-hover:before:duration-700"
@@ -442,7 +458,7 @@
           </div>
         </div>
         <div
-          class="project group overflow-hidden relative rounded-none"
+          class="project group overflow-hidden relative rounded-none h-56"
           data-filter="wp"
         >
           <a
@@ -453,7 +469,7 @@
             <img
               src="assets/images/condensate.png"
               alt="image"
-              class="w-full duration-300 group-hover:scale-105"
+              class="w-full duration-300 h-56 group-hover:scale-105"
             />
             <div
               class="work_overlay absolute overflow-hidden inset-2.5 group-hover:after:left-0 group-hover:after:opacity-100 group-hover:after:duration-700 group-hover:after:ease-in-out transition-all group-hover:before:right-0 group-hover:before:opacity-100 group-hover:before:w-full group-hover:before:ease-in-out group-hover:before:h-1/2 group-hover:before:duration-700"
@@ -467,7 +483,7 @@
           </div>
         </div>
         <div
-          class="project group overflow-hidden relative rounded-none"
+          class="project group overflow-hidden relative rounded-none h-56"
           data-filter="wp"
         >
           <a
@@ -478,7 +494,7 @@
             <img
               src="assets/images/marine_diesel.jpg"
               alt="image"
-              class="w-full duration-300 group-hover:scale-105"
+              class="w-full duration-300 h-56 group-hover:scale-105"
             />
             <div
               class="work_overlay absolute overflow-hidden inset-2.5 group-hover:after:left-0 group-hover:after:opacity-100 group-hover:after:duration-700 group-hover:after:ease-in-out transition-all group-hover:before:right-0 group-hover:before:opacity-100 group-hover:before:w-full group-hover:before:ease-in-out group-hover:before:h-1/2 group-hover:before:duration-700"
@@ -567,14 +583,14 @@
               </li>
               <li>
                 <a
-                  href="#"
+                  href="lpg-lng.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >LPG & LNG</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="contact.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >GET IN TOUCH</a
                 >
