--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Site Title -->
-    <title>Sale of Natural Gas - VISION INTERNATIONAL PETROLEUM</title>
+    <title>Contact - VISION INTERNATIONAL PETROLEUM</title>
 
     <!-- Site favicon -->
     <link rel="shortcut icon" href="assets/images/favicon.ico" />
@@ -18,10 +18,10 @@
       href="assets/css/materialdesignicons.min.css"
     />
 
+    <link rel="stylesheet" type="text/css" href="assets/css/custom.css" />
+
     <!-- Swiper's CSS -->
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
-
-    <link rel="stylesheet" type="text/css" href="assets/css/custom.css" />
 
     <!-- Tobii Css -->
     <link rel="stylesheet" href="assets/css/tobii.min.css" />
@@ -132,22 +132,22 @@
                   </li>
                   <li class="natural">
                     <a
-                      href="natural-gas.html active "
-                      class="text-sm text-green hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
+                      href="natural-gas.html"
+                      class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
                       >NATURAL GAS</a
                     >
                   </li>
-                  <li class="contact">
+                  <li class="lgp">
                     <a
                       href="lpg-lng.html"
                       class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
                       >LPG & LNG</a
                     >
                   </li>
-                  <li class="contact">
+                  <li class="contact active">
                     <a
                       href="contact.html"
-                      class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
+                      class="text-sm text-green hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
                       >CONTACT</a
                     >
                   </li>
@@ -212,14 +212,14 @@
                 <li class="crude">
                   <a
                     href="crude-oil.html"
-                    class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
+                    class="text-sm text-green hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
                     >CRUDE OIL</a
                   >
                 </li>
-                <li class="natural active">
+                <li class="contact">
                   <a
                     href="natural-gas.html"
-                    class="text-sm text-green hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
+                    class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
                     >NATURAL GAS</a
                   >
                 </li>
@@ -230,10 +230,10 @@
                     >LPG & LNG</a
                   >
                 </li>
-                <li class="contact">
+                <li class="contact active">
                   <a
                     href="contact.html"
-                    class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
+                    class="text-sm text-green hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
                     >CONTACT</a
                   >
                 </li>
@@ -246,104 +246,58 @@
 
     <!-- End Navbar -->
 
-    <!-- Start Hero -->
-    <section
-      class="lg:h-screen pt-[125px] pb-[130px] md:pt-36 md:pb-[140px] lg:py-20 lg:flex items-center justify-center bg-[url('../images/sale_natural_gas.jpg')] bg-cover relative bg-center"
-    >
-      <div class="bg-[#1f232d]/70 absolute inset-0 w-full h-full"></div>
-      <div class="container relative">
+    <section id="contact" class="relative text-white">
+      <img
+        src="assets/images/contact.jpg"
+        alt="Oil Rig"
+        class="w-full h-full object-cover"
+      />
+      <div class="bg-[#1f232d]/50 absolute inset-0 w-full h-full"></div>
+
+      <div class="container absolute top-56 right-4 mx-auto">
         <div class="grid grid-cols-1">
-          <div class="text-center">
+          <div class="text-end">
             <!-- <p><span class="border border-white/20 px-[30px] py-2 bg-white/10 rounded text-white">Awesome Web</span></p> -->
             <h1
-              class="font-medium font-secondary mt-6 text-4xl md:text-[76px] leading-tight text-white"
+              class="font-medium font-secondary mt-6 text-4xl md:text-[76px] leading-tight text-white text-end"
             >
-              Sale of Natural Gas
+              CONTACT US
             </h1>
-            <h3 class="font-secondary mt-6 text-3xl leading-7 text-white">
-              Products
-            </h3>
-
-            <!-- <div class="mt-6 gap-4 flex items-center justify-center">
-              <a href="#" class="btn-custom">Get Started</a>
-              <span class="text-white">or</span>
-              <a
-                href="#"
-                data-type="youtube"
-                data-id="YjhrligRTbE"
-                class="lightbox text-dark h-[58px] w-[58px] leading-[58px] rounded-full bg-white inline-block text-[26px]"
-                ><i class="mdi mdi-play"></i
-              ></a>
-            </div> -->
           </div>
         </div>
       </div>
+
+      <div class="absolute bottom-0 left-0 p-8">
+        <div>
+          <p class="text-2xl mb-2 font-bold">How can we help you?</p>
+          <p class="mb-1 font-semibold">Phone: (1) 956 7287257</p>
+          <p class="mb-1 font-semibold">
+            Email: info@visioninternationalpetroleum.com
+          </p>
+          <p class="font-semibold">
+            Corporate Office: 1303 Calle del Norte, Suite 900 Laredo Texas,
+            78041 USA.
+          </p>
+          <p class="text-lg mt-4 font-bold">INTERNATIONAL CONTACT</p>
+          <p class="mt-1 font-semibold">
+            Email: erick.g@visioninternationalpetroleum.com
+          </p>
+        </div>
+      </div>
     </section>
-    <!-- End Hero-->
 
-    <div class="container mt-16">
-      <h1 class="font-bold text-center lg:text-3xl">
-        Commercialization of Natural Gas, LPG & LNG
-      </h1>
-
-      <p class="text-muted leading-relaxed text-justify mt-8">
-        We have developed business relationships with the most important oil and
-        natural gas producers in South Texas, oil companies, marketers and
-        independent distributors in the state of Texas, in addition to having
-        access to oil from different parts of America with different API grades
-        at highly competitive prices.
-      </p>
-      <p class="mt-2 text-muted leading-relaxed text-justify">
-        We are an oil and gas operating and trading company, our experience in
-        the daily operation of fields in many different formations in the upper
-        Gulf Coast and South Texas regions, we work hand in hand with several
-        producing companies for the commercialization and supply of Dry Natural
-        Gas in Texas, in addition to the possibility of importing to Mexico
-        through the pipelines in which we count for its delivery.
-      </p>
-
-      <h2 class="mt-8 text-xl text-center">TYPES OF GAS AVAILABLE</h2>
-
-      <ul class="list-disc mt-4 pl-8">
-        <li>Dry natural gas.</li>
-        <li>Liquefied Natural Gas for deployment abroad.</li>
-      </ul>
-
-      <p class="mt-8 text-muted leading-relaxed text-justify">
-        Through our alliances, we offer the sale of Dry Natural Gas molecule
-        with access to the sale and loading of ships in their respective ports
-        or the following measurement and compression points that connect with
-        the oil and gas pipelines for exporting molecules from the USA to
-        Mexico. if applicable.
-      </p>
-
-      <h2 class="mt-8 text-xl text-center">DROP-OFF LOCATIONS TEXAS</h2>
-
-      <ul class="list-disc mt-4 pl-8">
-        <li>San Antonio Tx.(Natural Gas).</li>
-        <li>Corpus Christi Tx. (Natural Gas and LNG).</li>
-        <li>Agua Dulce Tx. (Natural Gas).</li>
-        <li>Presidio and El Paso Tx. (Natural Gas).</li>
-        <li>Waha Tx. (Natural Gas).</li>
-        <li>Houston Tx.(LNG).</li>
-      </ul>
+    <div class="h-96 w-full">
+      <gmp-map
+        center="27.556726455688477,-99.48308563232422"
+        zoom="14"
+        map-id="DEMO_MAP_ID"
+      >
+        <gmp-advanced-marker
+          position="27.556726455688477,-99.48308563232422"
+          title="My location"
+        ></gmp-advanced-marker>
+      </gmp-map>
     </div>
-
-    <section id="tanker" class="mt-16">
-      <div
-        class="flex justify-center items-center bg-cover relative bg-center bg-fixed bg-[url('../images/natural_gas.jpeg')] h-96"
-      >
-        <div class="absolute inset-0 w-full bg-[#1f232d]/70"></div>
-      </div>
-    </section>
-
-    <section id="tanker">
-      <div
-        class="flex justify-center items-center bg-cover relative bg-center bg-fixed bg-[url('../images/natural_gas_2.JPG')] h-96"
-      >
-        <div class="absolute inset-0 w-full bg-[#1f232d]/70"></div>
-      </div>
-    </section>
 
     <footer class="bg-[#222527] py-12">
       <div class="container">
@@ -501,6 +455,11 @@
 
     <!-- vanilla counter -->
     <script src="assets/js/vanilla-counter.js"></script>
+
+    <script
+      async
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAA6R4Gs3uZKEPEy4NaW2uiPNlpmCYcnfU&callback=console.debug&libraries=maps,marker&v=beta"
+    ></script>
 
     <!-- Custom Js -->
     <script src="assets/js/custom.js"></script>
