--- a/crude-oil.html
+++ b/crude-oil.html
@@ -24,6 +24,8 @@
     <!-- Tobii Css -->
     <link rel="stylesheet" href="assets/css/tobii.min.css" />
 
+    <link rel="stylesheet" type="text/css" href="assets/css/custom.css" />
+
     <!-- Pe7 Icon -->
     <link rel="stylesheet" type="text/css" href="assets/css/pe-icon-7.css" />
 
@@ -35,7 +37,7 @@
 
     <div class="fixed top-0 w-full z-50 custom-nav">
       <nav class="py-[22px] relative ease-in-out duration-500 mobile-nav">
-        <div class="container">
+        <div class="container-nav mx-auto px-4">
           <div class="flex items-center justify-between md:block">
             <div class="justify-between items-center flex w-full">
               <div class="z-50 w-20 h-14 relative lg:hidden">
@@ -142,6 +144,13 @@
                       >LPG & LNG</a
                     >
                   </li>
+                  <li class="contact">
+                    <a
+                      href="contact.html"
+                      class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
+                      >CONTACT</a
+                    >
+                  </li>
                 </ul>
               </div>
             </div>
@@ -221,6 +230,13 @@
                     >LPG & LNG</a
                   >
                 </li>
+                <li class="contact">
+                  <a
+                    href="contact.html"
+                    class="text-sm hover:text-green ease-in-out duration-300 inline-block leading-6 py-2 px-[7px]"
+                    >CONTACT</a
+                  >
+                </li>
               </ul>
             </div>
           </div>
@@ -279,27 +295,25 @@
         access to oil in different parts of America with different degrees °API
         at highly competitive prices.
       </p>
-
-      <div class="flex flex-col lg:flex-row mt-8 gap-4">
-        <div class="w-full mt-8">
-          <img
-            class="w-full h-auto object-contain"
-            src="assets/images/crude-oil-1.jpg"
-            alt="Descripción de la imagen"
-          />
-        </div>
-
-        <div class="w-full mt-8">
-          <img
-            class="w-full h-auto object-contain"
-            src="assets/images/crude-oil-2.JPG"
-            alt="Descripción de la imagen"
-          />
-        </div>
-      </div>
     </div>
 
-    <footer class="bg-[#222527] py-12 mt-32">
+    <section id="tanker" class="mt-16">
+      <div
+        class="flex justify-center items-center bg-cover relative bg-center bg-fixed bg-[url('../images/crude-oil-1.jpg')] h-96"
+      >
+        <div class="absolute inset-0 w-full bg-[#1f232d]/70"></div>
+      </div>
+    </section>
+
+    <section id="tanker">
+      <div
+        class="flex justify-center items-center bg-cover relative bg-center bg-fixed bg-[url('../images/crude-oil-2.JPG')] h-96"
+      >
+        <div class="absolute inset-0 w-full bg-[#1f232d]/70"></div>
+      </div>
+    </section>
+
+    <footer class="bg-[#222527] py-12">
       <div class="container">
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-7 gap-6">
           <div class="md:col-span-2 lg:col-span-2">
@@ -333,14 +347,14 @@
               </li>
               <li>
                 <a
-                  href="#"
+                  href="scope.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >SCOPE OF SERVICES</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="bunker-oil.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >BUNKER OIL</a
                 >
@@ -351,35 +365,35 @@
             <ul class="mt-12 space-y-2.5">
               <li>
                 <a
-                  href="#"
+                  href="fuels.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >FUELS</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="crude-oil.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >CRUDE OIL</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="natural-gas.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >NATURAL GAS</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="lpg-lng.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >LPG & LNG</a
                 >
               </li>
               <li>
                 <a
-                  href="#"
+                  href="contact.html"
                   class="text-white/40 text-sm duration-300 inline-block hover:text-white"
                   >GET IN TOUCH</a
                 >
